# melonPrimeDS

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  linux_mouse_input_hardening_20260711_133746.diff  mac_metal_hud_instance_state_fix_apply_20260711_185749_842351.diff  melonPrimeDS_Vulkan_Explicit3DOwnership_NextStep_apply.bat  melonPrimeDS_Vulkan_Native3DSlotAuthority_NextStep_apply_v1.bat  melonPrimeDS_Vulkan_Structured3DComposition_BuildFix_v5.bat  melonPrimeDS_Vulkan_Structured3DComposition_NextStep_apply_v4.bat  melonprime_bsd_host_packaging_apply_20260711-234808-641290.diff  melonprime_bsd_qt_qpa_apply_20260712-113225-076602.diff  melonprime_bsd_staged_artifact_apply_20260712-001256-443423.diff  melonprime_bsd_v3_recovery_apply_20260712-112557-368472.diff  melonprime_bsd_zip_verify_apply_20260712-115525-970625.diff  melonprime_cursor_state_fix_apply_20260711_183306_402823.diff  melonprime_cursor_state_fix_v2_apply_20260711_184531_642410.diff  melonprime_linux_aim_rawgrab_fix_apply_20260711-215416-397750.diff  melonprime_phase10-completion-v2-handle-cast_apply.diff  melonprime_phase12_completion_apply_20260712_215317.diff  melonprime_phase5_config_apply_20260711_193141_665245.diff  melonprime_platform_scatter_fix_apply_20260712T142320Z.diff  melonprime_sapphire_vulkan_a1_20260714-085513-789580.diff  melonprime_sapphire_vulkan_a1_report.json  melonprime_sapphire_vulkan_a2_a3_a4_a5_20260714-095725-832365.diff  melonprime_sapphire_vulkan_a2_a3_a4_a5_report.json  melonprime_sapphire_vulkan_a6_v126_report.json  melonprime_sapphire_vulkan_a7_v127_report.json  melonprime_vulkan_androidstyle_v2_20260713_101408_152116.diff  melonprime_vulkan_cursor_hires_radar_apply_20260713_094733_167320.diff  melonprime_vulkan_direct_compositor_p3_20260713_103701_583993.diff  melonprime_vulkan_direct_compositor_p4_20260713_105213_240544.diff  melonprime_vulkan_direct_compositor_p5_orientation_20260713_110644_008970.diff  melonprime_vulkan_direct_compositor_p6_20260713_112558_923520.diff  melonprime_vulkan_internal_resolution_p7_20260713_113935_641719.diff  melonprime_vulkan_native_raster_p8_20260713_122412_852363.diff  melonprime_vulkan_phase6_renderer_shell_20260712_111053.diff  melonprime_vulkan_phase6_renderer_shell_20260712_111424.diff  (+48 more)
src/: ARMJIT.cpp  CMakeLists.txt  DMA.cpp  DSi.h  GPU.cpp  GPU.h  GPU2D.cpp  GPU2D.h  GPU2D_Metal.h  GPU2D_Metal.mm  GPU2D_MetalFullGpuMethods.inc  GPU2D_MetalFullGpuShaders.inc  GPU2D_Soft.cpp  GPU2D_Soft.h  GPU2D_Structured.h  GPU2D_Vulkan.cpp  GPU2D_Vulkan.h  GPU3D.cpp  GPU3D.h  GPU3D_AcceleratedFrontend.cpp  GPU3D_AcceleratedFrontend.h  GPU3D_Compute.cpp  GPU3D_Compute.h  GPU3D_Compute_shaders.h  GPU3D_Metal.h  GPU3D_Metal.mm  GPU3D_MetalCompute.h  GPU3D_MetalCompute.mm  GPU3D_MetalComputeDepthBlendMethods.inc  GPU3D_MetalComputeDepthBlendShaders.inc  GPU3D_MetalComputeFinalPassMethods.inc  GPU3D_MetalComputeFinalPassShaders.inc  GPU3D_MetalComputeTexturedMethods.inc  GPU3D_MetalComputeTexturedShaders.inc  GPU3D_OpenGL.cpp  GPU3D_OpenGL.h  GPU3D_Soft.cpp  GPU3D_Soft.h  GPU3D_Texcache.h  GPU3D_TexcacheMetal.h  (+84 more)
src/SapphireGPU2DCore/: GPU2D_Soft.cpp  GPU2D_Soft.h  SapphireGPU2DRenderer2D.h  Unit.cpp  UnitSync.cpp  UnitSync.h
src/SapphireGenerated/: SapphireGpu2DEventBlockManifest.json  SapphireGpu2DHBlankCore.inc
src/SapphireVendor/: README.md
src/Vulkan_shaders/: build_probe.comp  clear_bitmap.frag  clear_bitmap.vert  manifest.json  opaque.frag  opaque.vert  phase10_presenter.frag  phase10_presenter.vert  phase11_compute.comp  phase14_final.vert  phase14_final_edge.frag  phase14_final_edge_fog.frag  phase14_final_fog.frag  phase14_native_raster.frag  phase14_native_raster.vert  phase14_shadow_mask.frag  phase14_stencil_clear.vert  phase14_stencil_only.frag  phase8_capture.comp  phase9_2d.comp  phase9_final.comp  presenter.frag  presenter.vert  shadow_mask.frag  texture_cache.comp  texture_sampling.comp  textured_polygon.frag  textured_polygon.vert  toon_highlight.frag  toon_highlight.vert  translucent.frag
src/debug/: GdbProto.cpp  GdbStub.cpp
src/frontend/: ScreenLayout.cpp
src/frontend/qt_sdl/: CMakeLists.txt  CheatsDialog.cpp  Config.cpp  Config.h  DesktopFrameLifetimeTracker.cpp  DesktopFrameLifetimeTracker.h  DesktopVulkanResourceLease.cpp  DesktopVulkanResourceLease.h  EmuInstance.cpp  EmuInstance.h  EmuInstanceInput.cpp  EmuSettingsDialog.cpp  EmuSettingsDialog.h  EmuSettingsDialog.ui  EmuThread.cpp  EmuThread.h  EmuThreadMelonPrimeFrameState.inc  EmuThreadMelonPrimeHandleMessagesFastPath.inc  EmuThreadMelonPrimeIncludes.inc  EmuThreadMelonPrimeRunSetup.inc  EmuThreadMelonPrimeUpdateRendererAfter.inc  HudEditSidePanel.cpp  InterfaceSettingsDialog.cpp  InterfaceSettingsDialog.h  InterfaceSettingsDialog.ui  LANDialog.cpp  LAN_Socket.cpp  MelonPrime.cpp  MelonPrime.h  MelonPrimeArm9Hook.cpp  MelonPrimeArm9Hook.h  MelonPrimeArm9InstructionHook.inc  MelonPrimeBattleFlowState.h  MelonPrimeBuildInfo.h  MelonPrimeColorDialogPrefs.cpp  MelonPrimeColorDialogPrefs.h  MelonPrimeCompilerHints.h  MelonPrimeConstants.h  MelonPrimeCustomHud.cpp  MelonPrimeCustomHud.h  (+265 more)
src/frontend/qt_sdl/.claude/: settings.local.json
src/frontend/qt_sdl/InputConfig/: InputConfigDialog.cpp  InputConfigDialog.h  InputConfigDialog.ui  MapButton.h  MelonPrimeInputConfig.cpp  MelonPrimeInputConfig.h  MelonPrimeInputConfig.ui  MelonPrimeInputConfigConfig.cpp  MelonPrimeInputConfigCustomHudBuild.inc  MelonPrimeInputConfigCustomHudCode.inc  MelonPrimeInputConfigHudDialogProps.inc  MelonPrimeInputConfigHudPreviews.inc  MelonPrimeInputConfigHudTables.inc  MelonPrimeInputConfigInternal.h  MelonPrimeInputConfigPreview.cpp
src/frontend/qt_sdl/MelonPrimeLocalization/: MelonPrimeLanguageRegistry.cpp  MelonPrimeLanguageRegistry.h  MelonPrimeLocalizationMetalVideoPresets.inc  MelonPrimeObjectTranslations.inc  MelonPrimeSplashLocalization.cpp  (+6 more)
src/net/: Netplay.cpp
src/shaders/metal/: ComputeDepthBlend.metal  ComputeFinalPass.metal  ComputeTextured.metal  DisplayCapture.metal  FullGpuOutput.metal  GPU2DFullGpu.metal  Presenter.metal  VisibleOutput.metal
(+1105 files in other folders)
